@@ -6,6 +6,8 @@ propellor (5.10.2) UNRELEASED; urgency=medium
     Thanks, Robin Munn
   * Bootstrap: Add haskell-type-errors package on Arch Linux.
     Thanks, Robin Munn
+  * Apt.buildDepIn: Run build-dep command in a temporary directory,
+    since it may sometimes not clean up all the files it creates.
 
  -- Joey Hess <id@joeyh.name>  Sun, 16 Feb 2020 12:37:10 -0400
 
